@@ -900,10 +900,13 @@
             - In the values of 'ButtonMenuItem.button_id', the prefix "button_" has been removed
               (see 'creme.creme_core.gui.button_menu.Button.generate_id()').
             - In the method 'EntityFilter.can_edit()', the type of filter is not checked anymore (it is checked by the views).
+            - In the class 'fields.RealEntityForeignKey' :
+                - The method 'get_cache_name()' has been replaced by the property 'cache_name'.
+                - The method 'get_prefetch_queryset()' has been replaced by 'get_prefetch_querysets()'.
             - In the model 'FieldsConfig' :
                 - The attributes "_excluded_fnames" & "_required_fnames" have been removed.
                 - The method 'update_form_fields()' now takes a form instance, and can set the _meta attribute (backported to 2.5.6/2.4.13).
-            - The method 'creme_core.models.history._HLTAuxCreation._model_info()' has been removed.
+            - The method 'history._HLTAuxCreation._model_info()' has been removed.
         # In 'creme_core.gui' :
             - The method 'bricks._BrickRegistry.get_bricks()' :
                 - does not build 'SpecificRelationsBrick' & 'CustomBrick' when no entity is given.
